<resources>
    <string name="username">Nombre del Usuario</string>
    <string name="password">Contraseña</string>
    <string name="btm_login">Ingresar</string>
    <string name="title_activity_login">Login</string>
    <string name="registration_instruction">Si no tiene un nombre y contraseña. Haga clic en el botón de abajo para registrarse</string>
    <string name="register_button">Registrate Hora</string>
    <string name="title_activity_register">Registrate Ahora</string>
    <string name="welcome">Bienvenido</string>
    <string name="is_login">Usted a iniciado session con extito</string>
    <string name="sign_up">Registrate Ahora</string>
    <string name="app">"AJAX"</string>
    <string name="action_settings">Configuración</string>
    <string name="action_buscar">Buscar</string>
    <string name="titulo_otros_cursos">Otros Cursos</string>
    <string name="texto_no_tarjetas">No tienes ninguna tarjeta asociada</string>
    <string name="etiqueta_universidad">UTNG</string>
    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_comunicate">Enviame Un Correo</string>
    <string name="item_desarrollador">Desarrollador</string>
    <string name="item_acerca">Acerca</string>
    <string name="item_login">Login</string>
    <string name="item_inicio">Inicio</string>
    <string name="item_cuenta">Mi Cuenta</string>
    <string name="item_categorias">Categorías</string>
    <string name="item_configuracion">Configuración</string>
    <string name="item_opciones_dinamicas">Aprende Dinamicamente</string>
    <string name="item_videos">Videos</string>
    <string name="item_enciar_correo">Enviar Correo</string>
    <string name="item_enciar_audios">Audios Tematicos</string>
    <string name="item_grafica">Grafica de avance</string>
    <string name="item_promocion">UTNG</string>
    <string name="item_canvas">Canvas</string>
    <string name="item_galerias">Galerias</string>
    <string name="tab_foro">Video Ayuda</string>
    <string name="pestaña_pulsada">"Pestaña Pulsada: "</string>
    <string name="titulo_tab_capitulos">CAPITULOS</string>
    <string name="titulo_tab_Videos">VIDEOS</string>
    <string name="titulo_tab_Material">MATERIAL</string>
    <string name="titulo_tab_perfil">PERFIL</string>
    <string name="titulo_tab_direcciones">DIRECCIONES</string>
    <string name="titulo_tab_desarrollador">DESARROLLADOR</string>
    <string name="titulo_tab_tarjetas">TARJETAS</string>
    <string name="texto_envia_correo">Enviar</string>
    <string name="etiqueta_info_usuario">usuario</string>
    <string name="etiqueta_contrasena">contraseña</string>
    <string name="etiqueta_info_desarrollador">Desarrollador</string>
    <string name="titulo_tab_foto">FOTO</string>
    <string name="etiqueta_info_foto">Foto</string>
    <string name="hello_blank_fragment">Fragmento vacio</string>
    <string name="nombre">Ingrese el nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="agregar">Agregar Usuario</string>
    <string name="nombre_info">Nombre</string>
    <string name="contraseña_info">Ingrese una contraseña</string>
    <string name="correo_info">Ingrese su correo electronico</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="emptyString" />
    <string name="Ayuda">En esta pestana te brindamos ayuda Si tienes alguna duda envía un correo
        al desarrollador.\n Su correo está en el tab de acerca de. También puedes modificar las
        preferencias en la ventana de configuración que está dentro del slide o si prefieres enviar
        un correo electrónico presionando el botón de abajo.
       </string>
    <string name="list_descripcion_videos">Hola en esta sección podrás reproducir cada uno de los
        videos que te ayudaran a comprender aún más las técnicas y la lógica de Ajax, te invitamos a
        que veas los videos, DIVIERTETE!!</string>
    <string name="list_fotos_galeria">Hola en esta sección podrás encontrar las imagenes mas
        importantes dentro de la Universidad UTNG, DIVIERTETE!!</string>
    <string name="list_descripcion_audios">Hola en esta sección podrás reproducir audios en Soundcloud,
       que es una aplicación donde puedes escuchar audios de todo tipo,
       los cuales   que te ayudaran a comprender aún más las técnicas y la
       lógica de Ajax, te invitamos a que escuches los audios, DIVIERTETE!!</string>
    <string name="position">posicion</string>
    <string name="itm_quiz">Quiz</string>
    <string name="siguiente">Siguiente</string>
    <string name="menu_settings">Menú</string>
    <string name="capitulos">Capítulos</string>
    <string name="abrir">Abrir</string>
    <string name="omitir">omitir</string>
    <string name="Bienvenida">Felicidades, acabas de registrarte, presiona el botón de inicio para ingresar al curso.</string>
    <string name="privilegios">Bienvenido, presiona el botón de inicio para ingresar al curso.
Si quieres tener acceso total a la aplicación
        regístrate presionando el botón que está en la parte inferior.</string>
    <string name="Privilegios_introduccion">Hola, Bienvenido, El término AJAX se presentó por primera
        vez en el artículo Ajax publicado por Jesse James Garrett el 18 de febrero de 2005. Hasta
        ese momento, no existía un término normalizado que hiciera referencia a un nuevo tipo de
        aplicación web que estaba apareciendo.</string>
    <string name="enviar_correo">Envía un correo al programador, puedes hacerlo desplegando la barra
        lateral de la aplicación, selecciona la opción enviar un correo, escribe el correo y listo.</string>
    <string-array name="audios">
        <item>Audio de introducción a Ajax</item>
        <item>Audio de primeros pasos en Ajax</item>
        <item>Audio de técnicas básicas con Ajax</item>
        <item>Audio de técnicas avanzadas con java</item>
        <item>Audio de JavaScript básico</item>
    </string-array>
    <string name="introduccion_ajax">El término AJAX se presentó por primera vez en el artículo
        Ajax: A New Approach to Web Applications
        (http://www.adaptivepath.com/publications/essays/archives/000385.php)
        publicado por Jesse James Garrett el 18 de febrero de 2005. Hasta ese momento,
        no existía un término normalizado que hiciera referencia a un nuevo tipo de aplicación web
        que estaba apareciendo. En realidad, el término AJAX es un acrónimo de
        Asynchronous JavaScript + XML, que se puede traducir como JavaScript asíncrono + XML.
        El artículo define AJAX de la siguiente forma: “Ajax no es una tecnología en sí mismo.
        En realidad, se trata de varias tecnologías independientes que se unen de formas nuevas y sorprendentes.”
        Las tecnologías que forman AJAX son:
        ▪ XHTML y CSS, para crear una presentación basada en estándares.
        ▪ DOM, para la interacción y manipulación dinámica de la presentación.
        ▪ XML, XSLT y JSON, para el intercambio y la manipulación de información.
        ▪ XMLHttpRequest, para el intercambio asíncrono de información.
        ▪ JavaScript, para unir todas las demás tecnologías.

    </string>
    <string name="primerosPasosAjax">
        La historia de AJAX está íntimamente relacionada con un objeto de programación llamado
            XMLHttpRequest. El origen de este objeto se remonta al año 2000, con productos como
            Exchange 2000, Internet Explorer 5 y Outlook Web Access.\n

            \n
            En este caso, una aplicación JavaScript descarga un archivo del servidor y muestra su
            contenido sin necesidad de recargar la página.\n\n
            \n

              script type="text/javascript">\n
                 function descargaArchivo() {\n
                   //Obtener la instancia del objeto XMLHttpRequest\n
                   if(window.XMLHttpRequest) {\n
                     peticion_http = new XMLHttpRequest();\n
                   }\n
            \n
            En el ejemplo anterior, cuando se carga la página se ejecuta el método JavaScript que
            muestra el contenido de un archivo llamado holamundo.txt que se encuentra en el servidor.
            La clave del código anterior es que la petición HTTP y la descarga de los contenidos del
            archivo se realizan sin necesidad de recargar la página.\n

            \n
            Los navegadores que siguen los estándares (Firefox, Safari, Opera, Internet Explorer 7 y 8)
            implementan el objeto XMLHttpRequest de forma nativa, por lo que se puede obtener a través del
            objeto window. Los navegadores obsoletos (Internet Explorer 6 y anteriores) implementan el
            objeto XMLHttpRequest como un objeto de tipo ActiveX.
            Una vez obtenida la instancia del objeto XMLHttpRequest, se prepara la función que se encarga
            de procesar la respuesta del servidor. La propiedad onreadystatechange del objeto
            XMLHttpRequest permite indicar esta función directamente incluyendo su código mediante una
            función anónima o indicando una referencia a una función independiente. En el ejemplo anterior
            se indica directamente el nombre de la función:\n

            \n
            peticion_http.onreadystatechange = muestraContenido;
    </string>
    <string name="tecnicasBasicasAjax">
         Algunas aplicaciones web disponen de varias listas desplegables, así como cajas de texto
            donde el usuario puede autocompletar. Las técnicas que se utilizan para desarrollar
            estas actividades normalmente requieren de un conocimiento avanzado de Ajax.\n

            \n
            Algunas aplicaciones web multi-idioma disponen de la posibilidad de introducir
            información en muchos idiomas diferentes. El principal problema de estas aplicaciones es
            que el teclado físico que utiliza el usuario no siempre corresponde al idioma en el que
            se quieren introducir los contenidos.\n

            \n
            La solución habitual de este problema consiste en mostrar un teclado virtual en la
            pantalla que muestre el valor correcto para cada tecla del idioma seleccionado por el
            usuario.\n

            \n
            Algunas veces, se presenta al usuario un cuadro de texto en el que tiene que introducir
            un valor que pertenece a un grupo muy grande de datos. Algunos casos habituales son:\n
            \n
            una dirección de correo electrónico que pertenezca a la libreta de direcciones del
            usuario, el nombre válido de un municipio de un país, el nombre de un empleado de una
            empresa grande, etc.
            \n
            La solución obviamente sería poner un cuadro de texto donde el usuario escriba las
            palabras iniciales de lo que desea buscar facilitando así al usuario el rango de posibilidades.


    </string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
</resources>